--- a/Landing_page.html
+++ b/Landing_page.html
@@ -2,34 +2,107 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Video Background</title>
+  <title>Video Background Scroll Transition</title>
   <style>
-    /* Make the video cover the whole screen */
-    body, html {
+    /* Reset dan tampilan umum */
+    * {
       margin: 0;
       padding: 0;
-      height: 100%;
-      overflow: hidden;
+      box-sizing: border-box;
     }
 
+    html, body {
+      height: 100%;
+      font-family: sans-serif;
+      scroll-behavior: smooth;
+    }
+
+    /* Video background */
     .video-background {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      min-width: 100%;
+      min-height: 100%;
+      transform: translate(-50%, -50%);
+      object-fit: cover;
+      z-index: -2;
+      transition: opacity 1s ease;
+    }
+
+    /* Overlay putih saat scroll */
+    .background-overlay {
       position: fixed;
       top: 0;
       left: 0;
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      opacity: 0;
       z-index: -1;
+      transition: opacity 1s ease;
     }
 
+    .overlay-visible .background-overlay {
+      opacity: 1;
+    }
+
+    .overlay-visible .video-background {
+      opacity: 0;
+    }
+
+    /* Navbar */
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 15px 0;
+      display: flex;
+      justify-content: center;
+      z-index: 10;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    }
+
+    .menu {
+      display: flex;
+      gap: 30px;
+    }
+
+    .menu a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    .menu a:hover {
+      text-decoration: underline;
+    }
+
+    /* Konten */
     .content {
       position: relative;
       z-index: 1;
       color: white;
       text-align: center;
-      top: 50%;
-      transform: translateY(-50%);
-      font-family: sans-serif;
+      padding-top: 100px;
+      min-height: 100vh;
+    }
+
+    .section {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      font-size: 24px;
+    }
+
+    /* Konten setelah scroll (teks gelap di atas putih) */
+    .section.light {
+      color: black;
+      background-color: white;
     }
   </style>
 </head>
@@ -37,15 +110,49 @@
 
   <!-- Background Video -->
   <video autoplay muted loop class="video-background">
-    <source src="D:\EN6\WEB\Resource\Hujan 3K RGB gen 1_720p.mp4" type="video/mp4">
+    <source src="Resource/Hujan 3K RGB gen 1_720p.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
 
-  <!-- Foreground Content -->
+  <!-- Putih overlay yang muncul saat scroll -->
+  <div class="background-overlay"></div>
+
+  <!-- Navigation Bar -->
+  <div class="navbar">
+    <div class="menu">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </div>
+  </div>
+
+  <!-- Hero Content -->
   <div class="content">
     <h1>Welcome to My Website</h1>
-    <p>This has a full-screen video background.</p>
+    <p>This has a full-screen video background that transitions to white on scroll.</p>
   </div>
+
+  <!-- Section putih -->
+  <div class="section light">
+    <h2>Now You're Scrolling Into the White Background</h2>
+  </div>
+  <div class="section light">
+    <h2>More Clean Content</h2>
+  </div>
+
+  <!-- JavaScript to toggle class -->
+  <script>
+    const body = document.body;
+    const triggerHeight = window.innerHeight / 2;
+
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > triggerHeight) {
+        body.classList.add('overlay-visible');
+      } else {
+        body.classList.remove('overlay-visible');
+      }
+    });
+  </script>
 
 </body>
 </html>
